--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@
     .menu .logo img {
       display: flex;
       align-items: center;
-      margin-left: 130px; }
+      margin-left: 120px; }
     .menu .logo p {
       text-align: center;
       font-family: 'Bebas Neue', cursive;
@@ -222,7 +222,9 @@
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
-    font-family: 'Bebas Neue', cursive; }
+    font-family: 'Bebas Neue', cursive;
+    margin-top: 30px;
+    font-size: 3rem; }
   .ul {
     width: 100%;
     background: lightgrey;
@@ -302,8 +304,8 @@
     height: 290px; }
     .headerInfo .menu .logo img {
       display: flex;
-      align-content: center;
-      margin-left: 100px; }
+      align-items: center;
+      margin-left: 130px; }
     .headerInfo .menu .logo p {
       text-align: center;
       font-family: 'Bebas Neue', cursive;
@@ -364,7 +366,7 @@
     box-shadow: 1em 1em 2em var(--sombra-ppal), -1em -1em 2em var(--sombra-sec), inset 0 0 0 transparent, inset 0 0 0 transparent;
     margin-left: 10px;
     margin-right: 30px;
-    height: 300px;
+    height: 700px;
     margin-top: 600px;
     margin-bottom: 100px; }
     .cajaInfo .tituloInfo {
@@ -385,7 +387,6 @@
       border-top: 5px solid red;
       margin-bottom: 40px; }
     .testimonios .captura img {
-      margin: 50px 50px 50px 50px;
       width: 400px;
       height: 700px; }
     .testimonios a {
@@ -398,6 +399,34 @@
       margin-left: 200px;
       font-family: 'Bebas Neue', cursive; }
     .testimonios a:hover {
+      background-color: #e24747;
+      border: 2px white solid;
+      padding: 13px 18px;
+      color: white;
+      list-style: none; }
+  .direccion {
+    margin-top: 170px; }
+    .direccion h3 {
+      text-align: center;
+      font-size: 3rem;
+      font-family: 'Bebas Neue', cursive; }
+    .direccion .linea {
+      border-top: 5px solid red;
+      margin-bottom: 40px; }
+    .direccion .capturaMaps img {
+      margin-left: 3px; }
+    .direccion a {
+      font-size: 1.3rem;
+      display: inline-block;
+      padding: 15px 20px;
+      background-color: red;
+      color: white;
+      text-decoration: none;
+      margin-left: 200px;
+      margin-top: 30px;
+      margin-bottom: 40px;
+      font-family: 'Bebas Neue', cursive; }
+    .direccion a:hover {
       background-color: #e24747;
       border: 2px white solid;
       padding: 13px 18px;
@@ -534,7 +563,7 @@
     .headerGaleria .menu .logo img {
       display: flex;
       align-content: center;
-      margin-left: 240px; }
+      align-items: center; }
     .headerGaleria .menu .logo p {
       text-align: center;
       font-family: 'Bebas Neue', cursive;
@@ -563,7 +592,9 @@
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
-    font-family: 'Bebas Neue', cursive; }
+    font-family: 'Bebas Neue', cursive;
+    margin-top: 30px;
+    font-size: 3rem; }
   .ul {
     width: 100%;
     background: lightgrey;
@@ -638,6 +669,140 @@
     border-radius: 1em;
     background-color: var(--blanco);
     box-shadow: 1em 1em 2em var(--sombra-ppal), -1em -1em 2em var(--sombra-sec), inset 0 0 0 transparent, inset 0 0 0 transparent; }
+  .headerInfo .menu {
+    background-color: black;
+    height: 290px; }
+    .headerInfo .menu .logo img {
+      display: flex;
+      align-items: center;
+      margin-left: 130px; }
+    .headerInfo .menu .logo p {
+      text-align: center;
+      font-family: 'Bebas Neue', cursive;
+      font-size: 1.3rem; }
+    .headerInfo .menu ul {
+      display: flex;
+      justify-content: space-between;
+      margin-left: auto;
+      padding: 11px 20px;
+      list-style: none;
+      text-decoration: none; }
+    .headerInfo .menu li a {
+      padding: 11px 20px;
+      list-style: none;
+      text-decoration: none;
+      font-size: 1rem;
+      color: white; }
+    .headerInfo .menu a:hover {
+      background-color: #df1a1a;
+      border: 1px solid white;
+      padding: 10px 19px;
+      color: white;
+      text-decoration: none; }
+  .titulo1 {
+    position: absolute;
+    color: black;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    margin-top: 100px; }
+    .titulo1 h1 {
+      font-size: 3.5rem;
+      font-family: 'Bebas Neue', cursive; }
+    .titulo1 p {
+      font-size: 1.5rem;
+      margin: 15px 20px;
+      font-family: 'Bebas Neue', cursive; }
+    .titulo1 a {
+      font-size: 1.3rem;
+      display: inline-block;
+      padding: 15px 20px;
+      background-color: red;
+      color: white;
+      text-decoration: none;
+      font-family: 'Bebas Neue', cursive; }
+    .titulo1 a:hover {
+      background-color: #e24747;
+      border: 2px white solid;
+      padding: 13px 18px;
+      color: white;
+      list-style: none; }
+  .cajaInfo {
+    color: var(--negro);
+    transition: all .4s ease;
+    border-radius: 1em;
+    background-color: var(--blanco);
+    box-shadow: 1em 1em 2em var(--sombra-ppal), -1em -1em 2em var(--sombra-sec), inset 0 0 0 transparent, inset 0 0 0 transparent;
+    margin-left: 10px;
+    margin-right: 30px;
+    height: 400px;
+    margin-top: 600px;
+    margin-bottom: 100px; }
+    .cajaInfo .tituloInfo {
+      font-size: 30px;
+      text-align: center;
+      padding: 10px 10px 10px 10px; }
+    .cajaInfo .parrafo {
+      font-size: 18px;
+      text-align: center; }
+  .testimonios {
+    width: 100%;
+    margin-top: 170px; }
+    .testimonios h3 {
+      text-align: center;
+      font-size: 3rem;
+      font-family: 'Bebas Neue', cursive; }
+    .testimonios .linea {
+      border-top: 5px solid red;
+      margin-bottom: 40px; }
+    .testimonios .captura img {
+      margin-left: 200px;
+      width: 400px;
+      height: 700px; }
+    .testimonios a {
+      font-size: 1.3rem;
+      display: inline-block;
+      padding: 15px 20px;
+      background-color: red;
+      color: white;
+      text-decoration: none;
+      font-family: 'Bebas Neue', cursive;
+      margin-left: 360px; }
+    .testimonios a:hover {
+      background-color: #e24747;
+      border: 2px white solid;
+      padding: 13px 18px;
+      color: white;
+      list-style: none; }
+  .direccion {
+    margin-top: 170px; }
+    .direccion h3 {
+      text-align: center;
+      font-size: 3rem;
+      font-family: 'Bebas Neue', cursive; }
+    .direccion .linea {
+      border-top: 5px solid red;
+      margin-bottom: 40px; }
+    .direccion .capturaMaps img {
+      margin-left: 200px; }
+    .direccion a {
+      font-size: 1.3rem;
+      display: inline-block;
+      padding: 15px 20px;
+      background-color: red;
+      color: white;
+      text-decoration: none;
+      margin-left: 360px;
+      margin-top: 30px;
+      margin-bottom: 40px;
+      font-family: 'Bebas Neue', cursive; }
+    .direccion a:hover {
+      background-color: #e24747;
+      border: 2px white solid;
+      padding: 13px 18px;
+      color: white;
+      list-style: none; }
   .pie-pagina {
     width: 100%;
     background-color: black;
@@ -832,7 +997,9 @@
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
-    font-family: 'Bebas Neue', cursive; }
+    font-family: 'Bebas Neue', cursive;
+    margin-top: 30px;
+    font-size: 3rem; }
   .ul {
     width: 100%;
     background: lightgrey;
@@ -907,6 +1074,138 @@
     border-radius: 1em;
     background-color: var(--blanco);
     box-shadow: 1em 1em 2em var(--sombra-ppal), -1em -1em 2em var(--sombra-sec), inset 0 0 0 transparent, inset 0 0 0 transparent; }
+  .headerInfo .menu {
+    display: flex;
+    background-color: black;
+    height: 170px; }
+    .headerInfo .menu .logo {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-left: 100px;
+      padding: 20px 40px;
+      font-size: 1.3rem; }
+    .headerInfo .menu ul {
+      display: flex;
+      margin-left: auto;
+      margin-right: 100px;
+      list-style: none;
+      text-decoration: none; }
+    .headerInfo .menu li a {
+      display: inline-block;
+      padding: 20px 40px;
+      font-size: 1.3rem;
+      color: white; }
+    .headerInfo .menu a:hover {
+      background-color: #df1a1a;
+      border: 1px solid white;
+      padding: 19px 39px;
+      color: white;
+      text-decoration: none; }
+  .titulo1 {
+    position: relative;
+    height: 300px;
+    color: #141212;
+    margin-top: 30px;
+    font-family: 'Bebas Neue', cursive;
+    text-align: center; }
+    .titulo1 h1 {
+      font-size: 5rem;
+      margin: 15px 30px;
+      font-family: 'Bebas Neue', cursive; }
+    .titulo1 p {
+      font-size: 1.5rem;
+      margin: 15px 20px;
+      font-family: 'Bebas Neue', cursive; }
+    .titulo1 a {
+      font-size: 1.3rem;
+      display: inline-block;
+      padding: 15px 20px;
+      background-color: red;
+      color: white;
+      text-decoration: none;
+      font-family: 'Bebas Neue', cursive; }
+    .titulo1 a:hover {
+      background-color: #e24747;
+      border: 2px white solid;
+      padding: 13px 18px;
+      color: white;
+      list-style: none; }
+  .cajaInfo {
+    color: var(--negro);
+    transition: all .4s ease;
+    border-radius: 1em;
+    background-color: var(--blanco);
+    box-shadow: 1em 1em 2em var(--sombra-ppal), -1em -1em 2em var(--sombra-sec), inset 0 0 0 transparent, inset 0 0 0 transparent;
+    width: 70%;
+    height: 300px;
+    margin-left: 300px; }
+    .cajaInfo .tituloInfo {
+      font-size: 30px;
+      text-align: center;
+      padding: 10px 10px 10px 10px; }
+    .cajaInfo .parrafo {
+      font-size: 18px;
+      text-align: center; }
+  .testimonios {
+    width: 100%;
+    margin-top: 170px; }
+    .testimonios h3 {
+      text-align: center;
+      font-size: 3rem;
+      font-family: 'Bebas Neue', cursive; }
+    .testimonios .linea {
+      border-top: 5px solid red;
+      margin-bottom: 40px; }
+    .testimonios .captura img {
+      margin-left: 500px; }
+    .testimonios a {
+      font-size: 1.3rem;
+      display: inline-block;
+      padding: 15px 20px;
+      background-color: red;
+      color: white;
+      text-decoration: none;
+      margin-left: 900px;
+      font-family: 'Bebas Neue', cursive; }
+    .testimonios a:hover {
+      background-color: #e24747;
+      border: 2px white solid;
+      padding: 13px 18px;
+      color: white;
+      list-style: none; }
+  .direccion {
+    width: 100%;
+    margin-top: 170px;
+    align-items: center; }
+    .direccion h3 {
+      text-align: center;
+      font-size: 3rem;
+      font-family: 'Bebas Neue', cursive; }
+    .direccion .linea {
+      border-top: 5px solid red;
+      margin-bottom: 40px; }
+    .direccion .capturaMaps img {
+      margin-left: 400px;
+      width: 1000px;
+      height: 800px; }
+    .direccion a {
+      font-size: 1.3rem;
+      display: inline-block;
+      padding: 15px 20px;
+      background-color: red;
+      color: white;
+      text-decoration: none;
+      margin-left: 900px;
+      margin-top: 30px;
+      margin-bottom: 40px;
+      font-family: 'Bebas Neue', cursive; }
+    .direccion a:hover {
+      background-color: #e24747;
+      border: 2px white solid;
+      padding: 13px 18px;
+      color: white;
+      list-style: none; }
   .pie-pagina {
     width: 100%;
     background-color: black; }
