--- a/scss/sass.scss
+++ b/scss/sass.scss
@@ -8,11 +8,15 @@
     // margen *****************************
     // mobile first *************************
 
+
+
+    //! MEDIA 550px ***************************
+
 @media screen and (max-width:550px){
       
 
-
-    //   header********************************
+     //! ************************************
+    //  PAGINA INDEZ
       .headerIndex{
         background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),
         url(https://images.unsplash.com/photo-1606954901803-c7c2432fc64e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
@@ -31,7 +35,7 @@
         .logo img{
             display: flex;
             align-items: center;
-            margin-left: 130px;
+            margin-left: 120px;
 
              }
         .logo p{
@@ -210,9 +214,9 @@
 
 }
 
-// ***************************************************************
+//! ***************************************************************
 
-// ****************************************************
+//! ****************************************************
 // footer
 
 .pie-pagina{
@@ -271,7 +275,7 @@
     }
 }
 
-// ******************************************
+//! ******************************************
 // PAGINA GALERIA 
 .headerGaleria{
     
@@ -332,6 +336,9 @@
 .tituloGaleria{
     @include flex( column , nowrap , center , center );
     font-family: 'Bebas Neue', cursive;
+    margin-top: 30px;
+    font-size: 3rem;
+
     
 }
 
@@ -416,7 +423,7 @@
     @include neo( 1 , 1em , 1em );
 
 }
-// ********************************
+//!  ********************************
 // PAGINA INFORMACION
 
 .headerInfo{
@@ -426,9 +433,8 @@
         height: 290px;
         .logo img{
             display: flex;
-            align-content: center;
-            margin-left: 100px;
-
+            align-items: center;
+            margin-left: 130px;
 
              }
         .logo p{
@@ -477,6 +483,9 @@
 
 }
 
+    
+
+
 .titulo1{
     position: absolute;
     color: rgb(0, 0, 0);
@@ -522,7 +531,7 @@
     @include neo( 1 , 1em , 1em );
     margin-left: 10px;
     margin-right: 30px;
-    height: 300px;
+    height: 700px;
     margin-top: 600px;
     margin-bottom: 100px;
    
@@ -536,6 +545,7 @@
         text-align: center;
     }
 }
+
 
 
 .testimonios{
@@ -552,7 +562,7 @@
         
      }
      .captura img{
-         margin: 50px 50px 50px 50px;
+         
          width: 400px;
          height: 700px;
      }
@@ -580,8 +590,56 @@
      }
 
 
+     .direccion{
+        
+        margin-top: 170px;
+        h3{
+            text-align: center;
+            font-size: 3rem;
+            font-family: 'Bebas Neue', cursive;
+        }
+         .linea{
+                border-top: 5px solid rgb(255, 0, 0);
+                margin-bottom: 40px;
+            
+         }
+         .capturaMaps img{
+             margin-left: 3px;
+         }
+          
+            a{
+                font-size: 1.3rem;
+                display: inline-block;
+                padding: 15px 20px;
+                background-color: rgb(255, 0, 0);
+                color: white;
+                text-decoration: none;
+                margin-left: 200px;
+                margin-top: 30px;
+                margin-bottom: 40px;
+                font-family: 'Bebas Neue', cursive;
+                
+                
+          }
+          a:hover{
+              background-color: rgb(226, 71, 71);
+              border: 2px white solid;
+              padding: 13px 18px;
+              color: white;
+              list-style: none;
+      
+          }
+    }
+
+
+
 
 }
+
+
+    //! MEDIA 550px a 1020px  ***************************
+
+
 @media screen and (min-width:551px)and  (max-width:1020px){
 
     // **********************************************
@@ -794,7 +852,7 @@
         .logo img{
             display: flex;
             align-content: center;
-            margin-left: 240px;
+            align-items: center;
 
 
              }
@@ -847,6 +905,8 @@
 .tituloGaleria{
     @include flex( column , nowrap , center , center );
     font-family: 'Bebas Neue', cursive;
+    margin-top: 30px;
+    font-size: 3rem;
     
 }
 
@@ -930,7 +990,211 @@
     @include neo( 1 , 1em , 1em );
 
 }
+//! *******
+// **********************************************
+// PAGINA INFORMACION 
 
+.headerInfo{
+    
+    .menu{
+        background-color: black;
+        height: 290px;
+        .logo img{
+            display: flex;
+            align-items: center;
+            margin-left: 130px;
+
+             }
+        .logo p{
+          text-align: center;
+          font-family: 'Bebas Neue', cursive;
+          font-size: 1.3rem;
+           }
+           ul{
+                    
+            display: flex;
+            justify-content: space-between;
+            margin-left: auto;
+            padding: 11px 20px;
+            list-style: none;
+            text-decoration: none;
+            
+            
+          
+            
+        }
+        li a{
+            
+            padding: 11px 20px;
+            list-style: none;
+            text-decoration: none;
+            font-size: 1rem;
+            color: white
+            
+            
+            
+            
+            
+           
+
+            }
+        a:hover{
+            background-color: rgb(223, 26, 26);
+            border: 1px solid white;
+            padding: 10px 19px;
+            color: white;
+            text-decoration: none;
+           
+        }
+
+}
+
+}
+
+.titulo1{
+    position: absolute;
+    color: rgb(0, 0, 0);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    margin-top: 100px;
+
+    h1{
+        font-size: 3.5rem;
+        
+        font-family: 'Bebas Neue', cursive;
+        
+    }
+    p{
+        font-size: 1.5rem;
+        margin: 15px 20px;
+        font-family: 'Bebas Neue', cursive;
+    }
+    a{
+          font-size: 1.3rem;
+          display: inline-block;
+          padding: 15px 20px;
+          background-color: rgb(255, 0, 0);
+          color: white;
+          text-decoration: none;
+          font-family: 'Bebas Neue', cursive;
+          
+          
+    }
+    a:hover{
+        background-color: rgb(226, 71, 71);
+        border: 2px white solid;
+        padding: 13px 18px;
+        color: white;
+        list-style: none;
+
+    }
+   }
+
+   .cajaInfo{
+    @include neo( 1 , 1em , 1em );
+    margin-left: 10px;
+    margin-right: 30px;
+    height: 400px;
+    margin-top: 600px;
+    margin-bottom: 100px;
+   
+    .tituloInfo{
+        font-size: 30px;
+        text-align: center;
+        padding: 10px 10px 10px 10px;
+    }
+    .parrafo{
+        font-size: 18px;
+        text-align: center;
+    }
+}
+
+
+
+.testimonios{
+    width: 100%;
+    margin-top: 170px;
+    h3{
+        text-align: center;
+        font-size: 3rem;
+        font-family: 'Bebas Neue', cursive;
+    }
+     .linea{
+            border-top: 5px solid rgb(255, 0, 0);
+            margin-bottom: 40px;
+        
+     }
+     .captura img{
+         margin-left: 200px;
+         width: 400px;
+         height: 700px;
+     }
+      
+        a{
+            font-size: 1.3rem;
+            display: inline-block;
+            padding: 15px 20px;
+            background-color: rgb(255, 0, 0);
+            color: white;
+            text-decoration: none;
+            font-family: 'Bebas Neue', cursive;
+            margin-left: 360px;
+            
+            
+      }
+      a:hover{
+          background-color: rgb(226, 71, 71);
+          border: 2px white solid;
+          padding: 13px 18px;
+          color: white;
+          list-style: none;
+  
+      }
+     }
+
+
+     .direccion{
+        
+        margin-top: 170px;
+        h3{
+            text-align: center;
+            font-size: 3rem;
+            font-family: 'Bebas Neue', cursive;
+        }
+         .linea{
+                border-top: 5px solid rgb(255, 0, 0);
+                margin-bottom: 40px;
+            
+         }
+         .capturaMaps img{
+            margin-left: 200px;
+         }
+          
+            a{
+                font-size: 1.3rem;
+                display: inline-block;
+                padding: 15px 20px;
+                background-color: rgb(255, 0, 0);
+                color: white;
+                text-decoration: none;
+                margin-left: 360px;
+                margin-top: 30px;
+                margin-bottom: 40px;
+                font-family: 'Bebas Neue', cursive;
+                
+                
+          }
+          a:hover{
+              background-color: rgb(226, 71, 71);
+              border: 2px white solid;
+              padding: 13px 18px;
+              color: white;
+              list-style: none;
+      
+          }
+    }
 
 
 // ****************************************************
@@ -997,9 +1261,12 @@
 
 }
 
+   
+      //! MEDIA 1021px a 2400px  ***************************
 
 
 @media screen and (min-width:1021px)and  (max-width:2400px){
+
 
     // *********************************
     // PAGINA INDEX
@@ -1260,7 +1527,8 @@
 .tituloGaleria{
     @include flex( column , nowrap , center , center );
     font-family: 'Bebas Neue', cursive;
-    
+    margin-top: 30px;
+    font-size: 3rem;
 }
 
 
@@ -1343,6 +1611,211 @@
     @include neo( 1 , 1em , 1em );
 
 }
+
+
+
+
+//! *********************************
+// PAGINA INFORMACION 
+
+
+.headerInfo{
+    .menu{
+                
+        display: flex;
+        background-color:black;
+        height: 170px;
+    
+        .logo{
+            
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-left: 100px;
+            padding: 20px 40px;
+            font-size: 1.3rem;
+
+
+        }
+        ul{
+            
+            display: flex;
+            margin-left: auto;
+            margin-right: 100px;
+            list-style: none;
+            text-decoration: none;
+          
+            
+        }
+        li a{
+            
+            display: inline-block;
+            padding: 20px 40px;
+            font-size: 1.3rem;
+            color: white
+            
+            
+            
+            
+            
+           
+
+            }
+        a:hover{
+            background-color: rgb(223, 26, 26);
+            border: 1px solid white;
+            padding: 19px 39px;
+            color: white;
+            text-decoration: none;
+           
+        }
+
+}
+
+}
+
+.titulo1{
+    position: relative;
+    height: 300px;
+    color: rgb(20, 18, 18);
+    margin-top: 30px;
+    font-family: 'Bebas Neue', cursive;
+    
+    text-align: center;
+
+    h1{
+        font-size: 5rem;
+        margin: 15px 30px;
+        font-family: 'Bebas Neue', cursive;
+    }
+    p{
+        font-size: 1.5rem;
+        margin: 15px 20px;
+        font-family: 'Bebas Neue', cursive;
+    }
+    a{
+          font-size: 1.3rem;
+          display: inline-block;
+          padding: 15px 20px;
+          background-color: rgb(255, 0, 0);
+          color: white;
+          text-decoration: none;
+          font-family: 'Bebas Neue', cursive;
+          
+          
+    }
+    a:hover{
+        background-color: rgb(226, 71, 71);
+        border: 2px white solid;
+        padding: 13px 18px;
+        color: white;
+        list-style: none;
+
+    }
+}
+
+.cajaInfo{
+    @include neo( 1 , 1em , 1em );
+    width: 70%;
+    height: 300px;
+    margin-left: 300px;
+    .tituloInfo{
+        font-size: 30px;
+        text-align: center;
+        padding: 10px 10px 10px 10px;
+    }
+    .parrafo{
+        font-size: 18px;
+        text-align: center;
+    }
+}
+
+.testimonios{
+    width: 100%;
+    margin-top: 170px;
+    h3{
+        text-align: center;
+        font-size: 3rem;
+        font-family: 'Bebas Neue', cursive;
+    }
+     .linea{
+            border-top: 5px solid rgb(255, 0, 0);
+            margin-bottom: 40px;
+        
+     }
+     .captura img{
+         margin-left: 500px;
+     }
+      
+        a{
+            font-size: 1.3rem;
+            display: inline-block;
+            padding: 15px 20px;
+            background-color: rgb(255, 0, 0);
+            color: white;
+            text-decoration: none;
+            margin-left: 900px;
+            font-family: 'Bebas Neue', cursive;
+            
+            
+      }
+      a:hover{
+          background-color: rgb(226, 71, 71);
+          border: 2px white solid;
+          padding: 13px 18px;
+          color: white;
+          list-style: none;
+  
+      }
+     }
+  
+
+    .direccion{
+        width: 100%;
+        margin-top: 170px;
+        
+        align-items: center;
+        h3{
+            text-align: center;
+            font-size: 3rem;
+            font-family: 'Bebas Neue', cursive;
+        }
+         .linea{
+                border-top: 5px solid rgb(255, 0, 0);
+                margin-bottom: 40px;
+            
+         }
+         .capturaMaps img{
+             margin-left: 400px;
+             width: 1000px;
+             height: 800px;
+         }
+          
+            a{
+                font-size: 1.3rem;
+                display: inline-block;
+                padding: 15px 20px;
+                background-color: rgb(255, 0, 0);
+                color: white;
+                text-decoration: none;
+                margin-left: 900px;
+                margin-top: 30px;
+                margin-bottom: 40px;
+                font-family: 'Bebas Neue', cursive;
+                
+                
+          }
+          a:hover{
+              background-color: rgb(226, 71, 71);
+              border: 2px white solid;
+              padding: 13px 18px;
+              color: white;
+              list-style: none;
+      
+          }
+    }
+
+
 
 
 // *************************************
