--- a/scss/sass.scss
+++ b/scss/sass.scss
@@ -23,30 +23,34 @@
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
-        position: relative;
-        height: 800px;
+       position: relative;
+        height: 1200px;
       }
 
       
       
       .menu{
         background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5));
-        height: 290px;
+        height: 590px;
+        
         .logo img{
-            display: flex;
-            align-items: center;
-            margin-left: 120px;
+            position: relative;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            margin-top: 100px;
 
              }
         .logo p{
           text-align: center;
           font-family: 'Bebas Neue', cursive;
-          font-size: 1.3rem;
+          font-size: 2.3rem;
            }
            ul{
                     
             display: flex;
-            justify-content: space-between;
+            flex-wrap: wrap;
+            flex-direction: column;
             margin-left: auto;
             padding: 11px 20px;
             list-style: none;
@@ -62,7 +66,9 @@
             list-style: none;
             text-decoration: none;
             font-size: 1rem;
-            color: white
+            color: white;
+            text-align: center;
+            
             
             
             
@@ -91,7 +97,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    margin-top: 100px;
+    margin-top: 300px;
 
     h1{
         font-size: 2.5rem;
@@ -128,6 +134,7 @@
 //  galeria *****************
 
 .galeria{
+    margin-top: 200px;
     font-family: 'open sans';
     h1{
         text-align: center;
@@ -280,18 +287,21 @@
 .headerGaleria{
     
     .menu{
-        background-color: black;
-        height: 290px;
+        background: black;
+        height: 590px;
+        
         .logo img{
-            display: flex;
-            align-items: center;
-            margin-left: 130px;
+            position: relative;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            margin-top: 100px;
 
              }
         .logo p{
           text-align: center;
           font-family: 'Bebas Neue', cursive;
-          font-size: 1.3rem;
+          font-size: 2.3rem;
            }
            ul{
                     
@@ -344,9 +354,10 @@
 
 
 .ul{
-    width: 100%;
+    width: 90%;
     background:lightgrey;
     padding:1em;
+    margin-left: 20px;
     margin-top: 5%;
     display: grid;
     grid-template-columns: repeat( 1fr );
@@ -429,19 +440,23 @@
 .headerInfo{
     
     .menu{
-        background-color: black;
-        height: 290px;
+        background: black;
+        height: 690px;
+        
         .logo img{
-            display: flex;
-            align-items: center;
-            margin-left: 130px;
+            position: relative;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            margin-top: 100px;
 
              }
         .logo p{
           text-align: center;
           font-family: 'Bebas Neue', cursive;
-          font-size: 1.3rem;
+          font-size: 2.3rem;
            }
+         
            ul{
                     
             display: flex;
@@ -493,7 +508,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    margin-top: 100px;
+    margin-top: 700px;
 
     h1{
         font-size: 3.5rem;
@@ -551,6 +566,9 @@
 .testimonios{
     width: 100%;
     margin-top: 170px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     h3{
         text-align: center;
         font-size: 3rem;
@@ -563,19 +581,26 @@
      }
      .captura img{
          
-         width: 400px;
-         height: 700px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 500px;
+        height: 600px;
      }
       
         a{
             font-size: 1.3rem;
-            display: inline-block;
             padding: 15px 20px;
             background-color: rgb(255, 0, 0);
             color: white;
             text-decoration: none;
-            margin-left: 200px;
             font-family: 'Bebas Neue', cursive;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
             
             
       }
@@ -609,14 +634,14 @@
           
             a{
                 font-size: 1.3rem;
-                display: inline-block;
                 padding: 15px 20px;
                 background-color: rgb(255, 0, 0);
                 color: white;
                 text-decoration: none;
-                margin-left: 200px;
-                margin-top: 30px;
-                margin-bottom: 40px;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
                 font-family: 'Bebas Neue', cursive;
                 
                 
@@ -656,12 +681,14 @@
 
       .menu{
         background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5));
-        height: 290px;
+        height: 390px;
       
         .logo img{
-            display: flex;
-            align-items: center;
-            margin-left: 260px;
+            position: relative;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            margin-top: 80px;
             
 
              }
@@ -718,7 +745,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    margin-top: 100px;
+    margin-top: 200px;
 
     h1{
         font-size: 2.5rem;
@@ -847,19 +874,21 @@
 .headerGaleria{
     
     .menu{
-        background-color: black;
-        height: 290px;
+        background: black;
+        height: 590px;
+        
         .logo img{
-            display: flex;
-            align-content: center;
-            align-items: center;
-
+            position: relative;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            margin-top: 100px;
 
              }
         .logo p{
           text-align: center;
           font-family: 'Bebas Neue', cursive;
-          font-size: 1.3rem;
+          font-size: 2.3rem;
            }
            ul{
                     
@@ -997,18 +1026,22 @@
 .headerInfo{
     
     .menu{
-        background-color: black;
-        height: 290px;
+        background: black;
+        height: 490px;
+        
         .logo img{
-            display: flex;
-            align-items: center;
-            margin-left: 130px;
+            position: relative;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            margin-top: 100px;
 
              }
         .logo p{
           text-align: center;
           font-family: 'Bebas Neue', cursive;
-          font-size: 1.3rem;
+          font-size: 2.3rem;
+          margin-bottom: 20px;
            }
            ul{
                     
@@ -1058,7 +1091,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    margin-top: 100px;
+    margin-top: 300px;
 
     h1{
         font-size: 3.5rem;
@@ -1116,6 +1149,11 @@
 .testimonios{
     width: 100%;
     margin-top: 170px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+    
     h3{
         text-align: center;
         font-size: 3rem;
@@ -1127,20 +1165,23 @@
         
      }
      .captura img{
-         margin-left: 200px;
-         width: 400px;
-         height: 700px;
+         display: flex;
+         flex-direction: column;
+         align-items: center;
+         justify-content: center;
+         width: 500px;
+         height: 500px;
      }
       
         a{
             font-size: 1.3rem;
-            display: inline-block;
+            
             padding: 15px 20px;
             background-color: rgb(255, 0, 0);
             color: white;
             text-decoration: none;
             font-family: 'Bebas Neue', cursive;
-            margin-left: 360px;
+            
             
             
       }
@@ -1156,7 +1197,9 @@
 
 
      .direccion{
-        
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         margin-top: 170px;
         h3{
             text-align: center;
@@ -1169,7 +1212,12 @@
             
          }
          .capturaMaps img{
-            margin-left: 200px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            width: 500px;
+            height: 500px;
          }
           
             a{
@@ -1179,10 +1227,13 @@
                 background-color: rgb(255, 0, 0);
                 color: white;
                 text-decoration: none;
-                margin-left: 360px;
                 margin-top: 30px;
                 margin-bottom: 40px;
                 font-family: 'Bebas Neue', cursive;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
                 
                 
           }
@@ -1732,31 +1783,49 @@
 
 .testimonios{
     width: 100%;
-    margin-top: 170px;
+    margin-top: 270px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: white;
+    text-align: center;
+    
     h3{
         text-align: center;
         font-size: 3rem;
         font-family: 'Bebas Neue', cursive;
+      color: black;
+       
     }
      .linea{
             border-top: 5px solid rgb(255, 0, 0);
             margin-bottom: 40px;
+            margin-top: 30px;
         
      }
      .captura img{
-         margin-left: 500px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
      }
       
         a{
             font-size: 1.3rem;
-            display: inline-block;
             padding: 15px 20px;
             background-color: rgb(255, 0, 0);
             color: white;
             text-decoration: none;
-            margin-left: 900px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
             font-family: 'Bebas Neue', cursive;
-            
+            width: 30%;
+            position: relative;
             
       }
       a:hover{
@@ -1773,8 +1842,13 @@
     .direccion{
         width: 100%;
         margin-top: 170px;
-        
+        display: flex;
+        flex-direction: column;
         align-items: center;
+        justify-content: center;
+        text-align: center;
+        color: white;
+        text-align: center;
         h3{
             text-align: center;
             font-size: 3rem;
@@ -1786,22 +1860,25 @@
             
          }
          .capturaMaps img{
-             margin-left: 400px;
+             
              width: 1000px;
              height: 800px;
          }
           
             a{
                 font-size: 1.3rem;
-                display: inline-block;
                 padding: 15px 20px;
                 background-color: rgb(255, 0, 0);
                 color: white;
                 text-decoration: none;
-                margin-left: 900px;
-                margin-top: 30px;
-                margin-bottom: 40px;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                text-align: center;
                 font-family: 'Bebas Neue', cursive;
+                width: 30%;
+                position: relative;
                 
                 
           }
@@ -1878,4 +1955,173 @@
     }
 }
 
+}
+
+// *********************
+// formulario 
+
+.body-reservar {
+	font-family: 'Roboto', sans-serif;
+	background: #E5E5E5;
+}
+
+
+
+.main-reservar {
+	max-width: 800px;
+	width: 90%;
+	margin: auto;
+	padding: 40px;
+}
+
+.formulario {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 20px;
+}
+
+.formulario__label {
+	display: block;
+	font-weight: 700;
+	padding: 10px;
+	cursor: pointer;
+}
+
+.formulario__grupo-input {
+	position: relative;
+}
+
+.formulario__input {
+	width: 100%;
+	background: #fff;
+	border: 3px solid transparent;
+	border-radius: 3px;
+	height: 45px;
+	line-height: 45px;
+	padding: 0 40px 0 10px;
+	transition: .3s ease all;
+}
+
+.formulario__input:focus {
+	border: 3px solid #0075FF;
+	outline: none;
+	box-shadow: 3px 0px 30px rgba(163,163,163, 0.4);
+}
+
+.formulario__input-error {
+	font-size: 12px;
+	margin-bottom: 0;
+	display: none;
+}
+
+.formulario__input-error-activo {
+	display: block;
+}
+
+.formulario__validacion-estado {
+	position: absolute;
+	right: 10px;
+	bottom: 15px;
+	z-index: 100;
+	font-size: 16px;
+	opacity: 0;
+}
+
+.formulario__checkbox {
+	margin-right: 10px;
+}
+
+.formulario__grupo-terminos, 
+.formulario__mensaje,
+.formulario__grupo-btn-enviar {
+	grid-column: span 2;
+}
+
+.formulario__mensaje {
+	height: 45px;
+	line-height: 45px;
+	background: #F66060;
+	padding: 0 15px;
+	border-radius: 3px;
+	display: none;
+}
+
+.formulario__mensaje-activo {
+	display: block;
+}
+
+.formulario__mensaje p {
+	margin: 0;
+}
+
+.formulario__grupo-btn-enviar {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.formulario__btn {
+	height: 45px;
+	line-height: 45px;
+	width: 30%;
+	background: #000;
+	color: #fff;
+	font-weight: bold;
+	border: none;
+	border-radius: 3px;
+	cursor: pointer;
+	transition: .1s ease all;
+}
+
+.formulario__btn:hover {
+	box-shadow: 3px 0px 30px rgba(163,163,163, 1);
+}
+
+.formulario__mensaje-exito {
+	font-size: 14px;
+	color: #119200;
+	display: none;
+}
+
+.formulario__mensaje-exito-activo {
+	display: block;
+}
+
+/* ----- -----  Estilos para Validacion ----- ----- */
+.formulario__grupo-correcto .formulario__validacion-estado {
+	color: #1ed12d;
+	opacity: 1;
+}
+
+.formulario__grupo-incorrecto .formulario__label {
+	color: #bb2929;
+}
+
+.formulario__grupo-incorrecto .formulario__validacion-estado {
+	color: #bb2929;
+	opacity: 1;
+}
+
+.formulario__grupo-incorrecto .formulario__input {
+	border: 3px solid #c02424;
+}
+
+
+
+
+
+@media screen and (max-width: 800px) {
+	.formulario {
+		grid-template-columns: 1fr;
+	}
+
+	.formulario__grupo-terminos, 
+	.formulario__mensaje,
+	.formulario__grupo-btn-enviar {
+		grid-column: 1;
+	}
+
+	.formulario__btn {
+		width: 100%;
+	}
 }
