--- a/scss/sass.scss
+++ b/scss/sass.scss
@@ -656,7 +656,24 @@
           }
     }
 
-
+    .contenedor{
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+ 
+        
+        img{
+            width: 600px;
+            height: 300px;
+            box-shadow: 25px 25px 8px #444;
+            margin-top: 30px;
+            object-fit: cover;
+            margin-bottom: 30px;
+            padding: 5px 10px 0 10px;
+            
+        }
+    }
 
 
 }
@@ -1245,6 +1262,23 @@
               list-style: none;
       
           }
+
+          .contenedor{
+            position: relative;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+     
+            
+            img{
+                width: 700px;
+                height: 400px;
+                box-shadow: 25px 25px 8px #444;
+                margin-top: 30px;
+                object-fit: cover;
+                
+            }
+        }
     }
 
 
@@ -1307,7 +1341,23 @@
     }
 }
 
+.contenedor{
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
+    
+    img{
+        width: 700px;
+        height: 400px;
+        box-shadow: 25px 25px 8px #444;
+        margin-top: 30px;
+        object-fit: cover;
+        margin-bottom: 30px;
+        
+    }
+}
 
 
 }
@@ -1668,7 +1718,10 @@
 
 //! *********************************
 // PAGINA INFORMACION 
-
+.body-info{
+  
+	
+}
 
 .headerInfo{
     .menu{
@@ -1893,14 +1946,32 @@
           }
     }
 
+    //    slider
+   
+   .contenedor{
+       position: relative;
+       display: flex;
+       align-items: center;
+       justify-content: center;
 
-
+       
+       img{
+           width: 700px;
+           height: 400px;
+           box-shadow: 25px 25px 8px #444;
+           margin-top: 30px;
+           object-fit: cover;
+           
+       }
+   }
+ 
 
 // *************************************
 // FOOTER
 .pie-pagina{
     width: 100%;
     background-color: black;
+    margin-top: 60px;
     .grupo1{
         width: 100%;
         max-width: 1600px;
@@ -1957,6 +2028,9 @@
 }
 
 }
+
+//! *****************************************************************
+// ! termina media desktop
 
 // *********************
 // formulario 
